--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         ALX - Kursy
 
-        <nav>
+        <nav style="border: 1px solid black;">
             Start | O nas | Kursy | Kontakt
         </nav>
     </header>
@@ -23,7 +23,8 @@
         <!-- Jedna logiczna calosc ( produkt , wpis, artykul ) -->
         <article>
             <!-- lorem + tab -->
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quisquam excepturi nesciunt officia similique, expedita, id esse sunt aspernatur voluptatem ullam cum sapiente possimus, in accusamus? Explicabo cum consequatur dolore.
+            <!-- paragraph -->
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quisquam excepturi nesciunt officia similique, expedita, id esse sunt aspernatur voluptatem ullam cum sapiente possimus, in accusamus? Explicabo cum consequatur dolore.</p>
 
             <!-- sekcja pewnej calosci -->
             <section></section>
@@ -31,7 +32,43 @@
 
         <!-- Poboczna tresc -->
         <aside>
-            Podobne wpisy
+            <!-- heading - poziom 1 -->
+            <h1>Podobne wpisy</h1>
+            <!-- heading - poziom 6 -->
+            <h6>Najmnniej istotny</h6>
+
+            <div>Szarlotka</div>
+            <span>Makoiwiec</span>
+
+            <!-- unorded list -->
+            <ul>
+                <li>First</li>
+                <li>Second</li>
+                <li>
+                    Third
+                    <!-- ordered list -->
+                    <ol>
+                        <li>1111</li>
+                        <li>2222</li>
+                        <li>3333</li>
+                    </ol>
+                </li>
+                <li>FOurth</li>
+            </ul>
+
+            Tekst
+            <!--  break -->
+            <br/>
+            <br />
+            <!-- bold -->
+            
+            <p>
+                Lorem <b>ipsum</b> dolor sit amet consectetur, adipisicing elit.
+                <hr/>
+                Sint quo placeat, reprehenderit voluptas rem nemo pariatur quibusdam repudiandae porro veniam exercitationem cupiditate ullam possimus sed ut in accusamus aut et.
+            </p>
+            
+            <img src="../GIT_02_bckp/images/logo.png" alt="Hamburger" />
         </aside>
     </main>
 
