--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <style>
         /*  TU byly wczesniej style */
     </style>
+
+    <script>
+    //    Tu wczesniej byl kod JS
+    </script>
+
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <!-- ctrl + / -->
@@ -29,7 +35,7 @@
     </header>
 
     <button>Zapisz</button>
-    <button type="reset">Resetuj</button>
+    <button id="reset-btn" type="reset">Resetuj</button>
     <button id="btn">Guzik</button>
 
     <button id="btn-2" class="yellow">Text zolty</button>
